Added suspend flag.

--- a/Day4/cronjob/cronjob.yml
+++ b/Day4/cronjob/cronjob.yml
@@ -3,9 +3,10 @@ kind: CronJob
 metadata:
   name: hello
 spec:
-  schedule: "0 * * * *"
+  schedule: "* * * * *"
   jobTemplate:
     spec:
+      suspend: true
       template:
         spec:
           containers:
