Updated Dockerfile copy command.

--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -7,6 +7,6 @@ WORKDIR /hello
 RUN mvn package
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as run
-COPY --from=build ./app.jar /hello/target/*.jar
+COPY --from=build /hello/target/*.jar ./app.jar
 
 CMD ["java", "-jar", "./app.jar"]
