--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -2,9 +2,8 @@ FROM registry.redhat.io/ubi8/openjdk-11:latest as build
 MAINTAINER Jeganathan Swaminathan <jegan@tektutor.org>
 
 COPY * /hello
-WORKDIR /hello
 
-RUN mvn package
+RUN cd /hello && mvn package
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as run
 COPY --from=build /hello/target/*.jar ./app.jar
