--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -1,11 +1,13 @@
 FROM registry.redhat.io/ubi8/openjdk-11:latest as build
 MAINTAINER Jeganathan Swaminathan <jegan@tektutor.org>
 
-COPY * /hello
+RUN mkdir -p ./hello
 
-RUN cd /hello && mvn package
+COPY * ./hello
+
+RUN cd ./hello && mvn package
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as run
-COPY --from=build /hello/target/*.jar ./app.jar
+COPY --from=build ./hello/target/*.jar ./app.jar
 
 CMD ["java", "-jar", "./app.jar"]
