--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -5,9 +5,11 @@ RUN mkdir -p ./hello
 
 COPY * ./hello
 
-RUN cd ./hello && mvn package
+WORKDIR ./hello
+
+RUN mvn package
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as run
-COPY --from=build ./hello/target/*.jar ./app.jar
+COPY --from=build ./app.jar ./hello/target/*.jar
 
 CMD ["java", "-jar", "./app.jar"]
