--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -8,5 +8,5 @@ RUN mvn package
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as runner
 
-COPY --from=builder target/*.jar ./app.jar
+COPY --from=builder target/spring-hello-1.0.jar ./app.jar
 CMD ["java", "-jar", "./app.jar"]
