--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -4,8 +4,8 @@ MAINTAINER Jeganathan Swaminathan <jegan@tektutor.org>
 RUN mkdir -p ./hello
 COPY . ./hello
 WORKDIR ./hello
-COPY ./hello/target/spring-hello-1.0.jar /tmp/app.jar
 RUN mvn package
+COPY target/spring-hello-1.0.jar /tmp/app.jar
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as runner
 
