Fixed multi-stage Dockerfile copy path.

--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -2,8 +2,7 @@ FROM registry.redhat.io/ubi8/openjdk-11:latest as builder
 MAINTAINER Jeganathan Swaminathan <jegan@tektutor.org>
 
 RUN mkdir -p ./hello
-COPY . ./hello
-WORKDIR ./hello
+COPY . .
 RUN mvn package
 COPY target/spring-hello-1.0.jar /tmp/app.jar
 
