--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -2,9 +2,9 @@ FROM registry.redhat.io/ubi8/openjdk-11:latest as builder
 MAINTAINER Jeganathan Swaminathan <jegan@tektutor.org>
 
 RUN mkdir -p ./hello
-COPY . .
-RUN mvn package
-COPY target/spring-hello-1.0.jar /tmp/app.jar
+COPY . ./hello
+RUN cd ./hello && mvn package && cd ..
+COPY ./hello/target/spring-hello-1.0.jar /tmp/app.jar
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as runner
 
