--- a/Day5/spring-ms-multistage/Dockerfile
+++ b/Day5/spring-ms-multistage/Dockerfile
@@ -1,10 +1,11 @@
 FROM registry.redhat.io/ubi8/openjdk-11:latest as builder
 MAINTAINER Jeganathan Swaminathan <jegan@tektutor.org>
 
-RUN mkdir -p ./hello
-COPY . ./hello
-RUN cd ./hello && mvn package && cd ..
-COPY ./hello/target/spring-hello-1.0.jar /tmp/app.jar
+RUN mkdir -p -m 0700 ./hello/target
+WORKDIR ./hello
+
+COPY . ./ 
+RUN mvn package && cp ./target/spring-hello-1.0.jar /tmp/app.jar
 
 FROM registry.redhat.io/ubi8/openjdk-11:latest as runner
 
