Replaced Docker openjdk image with redhat registr openjdk to fix the docker pull limit issue.

--- a/Day2/spring-ms/Dockerfile
+++ b/Day2/spring-ms/Dockerfile
@@ -1,4 +1,4 @@
-FROM docker.io/openjdk:latest
+FROM registry.redhat.io/ubi8/openjdk-11
 COPY hello.jar /app.jar
 EXPOSE 8080
 ENTRYPOINT [ "java", "-jar", "/app.jar" ]
