--- a/Day5/ansible/create-buildconfig-playbook.yml
+++ b/Day5/ansible/create-buildconfig-playbook.yml
@@ -12,4 +12,4 @@
   - name: Create a BuildConfig 
     k8s:
       state: present
-      src: ../../Day5/build-config/build-config.yml
+      src: ./build-config.yml
